# datagov-catalog

./: .env  .env.copy  .env.sample  .gitignore  .pa11yci  .pre-commit-config.yaml  .profile  .snyk  Dockerfile  Makefile  README.md  app-start.sh  docker-compose.yml  lighthouserc.yml  manifest.yml  package-lock.json  package.json  pull_request_template.md  pyproject.toml  run.py  vars.development.yml  vars.prod.yml  vars.staging.yml  wsgi.py
.github/actions/deploy/: action.yml
.github/scripts/: compute-asset-version.sh
.github/workflows/: check-db-models.yml  check-files-with-harvester.yml  check-vendored-files.yml  codeql.yml  commit.yml  deploy.yml  restart.yml  sitemap.yml  snyk.yml  synchronize_opensearch_index.yml
app/: __init__.py  api_schemas.py  commands.py  dcat_normalizer.py  dcat_opensearch.py  dev_routes.py  filter_helpers.py  filters.py  models.py  opensearch.py  routes.py  sitemap_s3.py  startup_validation.py  static_assets.py  utils.py
app/database/: __init__.py  constants.py  interface.py  opensearch.py  query_parse.py
app/search/: __init__.py  criteria.py  registry.py
app/search/filters/: __init__.py  access_level.py  base.py  collection.py  geography.py  keyword.py  organization.py  organization_type.py  publisher.py  spatial_data.py
app/static/: package-lock.json  package.json
app/static/_scss/: _uswds-theme-custom-styles.scss
app/static/_scss/components/: _collection_card.scss  _file_icon.scss  _filter-sidebar.scss  _filters.scss  _footer.scss  _geography.scss  _header.scss  _not_found.scss  (+2 more)
app/static/js/: dataset_feedback.js  dataset_tags.js  filter_accordion.js  filter_controllers.js  filter_dropdowns.js  filter_form_auto_submit.js  filter_sidebar_toggle.js  filter_submit.js  filters_autocomplete.js  geography_autocomplete.js  geography_map_mixin.js  geography_utils.js  keyword_autocomplete.js  third_party_launcher.js  uswds_combo_sync.js  view_bbox_map.js
app/templates/: 404.html  base.html  dataset_detail.html  harvest_record_list.html  index.html  organization_detail.html  organization_list.html  style_guide_icons.html  swagger.html
app/templates/components/: announcement_banner.html  beta_banner.html  collection_card.html  dataset_card.j2  dataset_metrics.html  dataset_results.html  dataset_results_organization.html  dataset_search.html  filter_bar.html  filter_sidebar.html  footer.html  header.html  labeled_file_icon.html  navigation.html
config/: newrelic.ini
docs/: legacy-filter-fallback-cleanup.md  load-test.md  opensearch.md  search-filters-walkthrough.html  search-filters-walkthrough.md  search-filters.md
proxy/: .profile  nginx-common.conf  nginx-maintenance.conf  nginx-maps.conf  nginx.conf
proxy/public/: robots.txt
shared/: constants.py  opensearch_schema.py
tests/: conftest.py  fixtures.py  helpers.py  index_test_data.py  opensearch_helpers.py  opensearch_test_client.py  test_commands.py  test_dataset_detail.py  test_filters.py  test_interface.py  test_openapi.py  test_opensearch.py  test_query_parser.py  test_routes.py  test_search.py  test_sitemap.py  test_sort_keyword_preservation.py
tests/browser/: conftest.py  filter_helpers.py  test_base.py  test_dataset.py  test_filters.py  test_organizations.py  test_search.py  test_search_sort_and_filters.py
tests/data/: .~lock.americorps_datasets.csv#  americorps_datasets.csv  extra_datasets.csv  extra_orgs.csv
tests/helpers/: opensearch.py
tests/unit/: conftest.py  test_api_schemas.py  test_commands.py  test_dataset_detail.py  test_dcat_normalizer.py  test_dcat_opensearch.py  test_filter_helpers.py  test_filters.py  test_interface.py  test_openapi.py  test_opensearch.py  test_routes.py  test_search.py  test_search_filter_registry.py  test_security_headers.py  test_show_more_loading_overlay.py  test_sort_keyword_preservation.py  test_startup_validation.py  test_static_assets.py
tools/: monitor_cf_logs.sh
(+11 files in other folders)
