[project]
name = "datagov-catalog"
version = "0.1.0"
description = "New Data.gov catalog UI"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "poetry-plugin-export (>=1.9.0,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.0,<3.0.0)",
    "psycopg[binary] (>=3.2.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "geoalchemy2 (>=0.14.0,<0.19.0)",
    "flask-htmx (>=0.4.0,<0.5.0)",
    "opensearch-py (>=3.0.0,<4.0.0)",
    "botocore (>=1.40.55,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "newrelic (>=11.4.0,<12.0.0)",
    
]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
ruff = "^0.14.14"
isort = "^7.0.0"
beautifulsoup4 = "^4.14.2"
moto = {version = ">=5.0.0,<6.0.0", extras = ["s3"]}
pytest = ">=8.4.2,<10.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
