[project]
name = "datagov-catalog"
version = "0.1.0"
description = "New Data.gov catalog UI"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-htmx (>=0.4.0,<0.5.0)",
    "opensearch-py (>=3.2.0,<4.0.0)",
    "botocore (>=1.43.48,<2.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "flask-talisman (>=1.1.0,<2.0.0)",
    "apiflask (>=3.1.1,<4.0.0)",
    "newrelic (>=11.5.0,<12.0.0)",
    "click (>=8.4.2,<9.0.0)",
    "flask-httpauth (>=4.8.1,<5.0.0)",
    "idna (>=3.18,<4.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "requests (>=2.33.0,<3.0.0)",
    "urllib3 (>=2.7.0,<3.0.0)",
    "soupsieve (>=2.8.4,<3.0.0)",
    "datagov-data-access @ git+https://github.com/GSA/datagov-databases.git@1.0.0",

]

[tool.poetry]
packages = [
    { include = "app" }
]

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
ruff = "^0.15.21"
isort = "^8.0.1"
beautifulsoup4 = "^4.15.0"
moto = {version = ">=5.2.2,<6.0.0", extras = ["s3"]}
pytest = ">=9.1.1,<10.0.0"
pytest-playwright = "^0.8.0"
playwright = "^1.61.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.10"

[tool.isort]
profile = "black"
skip = [".poetry", "app/static/node_modules", ".venv"]

[tool.black]
target-version = ["py312"]
